--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>index.html</title>
 </head>
 <body>
-    
+    <header>김태환의 홈페이지에 오신 것을 환영합니다.</header>
+    <p>클라우드 기반 웹 프로그래밍 강좌 리스트</p>
 </body>
 </html>
